<resources>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="createContact">Create contact</string>
    <string name="receiver">receiver email</string>
    <string name="subject">message subject</string>
    <string name="content">message content</string>
    <string name="succesfullSent">"Succesfully sent the message"</string>
    <string name="bcc">"Bccs of your message "</string>
    <string name="ccc">"CCCs of your message "</string>
    <string name="cannotSend">"The message cannot be sent"</string>
    <string name="applySettings">ApplyChanges</string>
    <string name="app_name">EmailApplication</string>
    <string name="noInternet">no internet connection</string>
    <string name="LoginStr">LOG IN</string>
    <string name="registerStr">REGISTER</string>
    <string name="FirstNameHint">First Name</string>
    <string name="LastHint">Last Name</string>
    <string name="Allow">Accept Notifications</string>
    <string name="Password1">Password</string>
    <string name="gender">gender:</string>
    <string name="Username1">Username</string>
    <string name="Birth">Birth day:</string>
    <string name="LogoutStr">Log out</string>
    <string name="contactView">Pera Peric</string>
    <string name="logoutString">LOG OUT</string>
    <string name="MsgTxt">message text</string>
    <string name="SendBtnTxt">send</string>
    <string name="usernameHint">username or email</string>
    <string name="contactEmail">contact email</string>
    <string name="registerSucces">Successfully registered</string>
    <string name="cannotRegister">Cannot register with those credentials</string>
    <string name="registerPop3">pop3 or imap port</string>
    <string name="registerSmtp">smtp port</string>
    <string name="usernameRegister">username</string>
    <string name="FirstLetter">a</string>
    <string name="randomname">Marko Markovic</string>
    <string name="hello">hello</string>
    <string name="my_cht_list">Contacts List:</string>
    <string name="message1">What are you doing?</string>
    <string name="message2">Playing video games,you?:)</string>
    <string name="message3">Woow,me too,lets play together.</string>
    <string name="message4">We could my friend.</string>
    <string name="rndmsg">Hello</string>
    <string name="nameExist">The username you have entered alredy exists</string>
    <string name="nameNotExist">The username you have entered does not exist</string>
    <string name="loginSucces">Login succesfull</string>
    <string name="bundleproblem">Problem loading bundle!</string>
    <string name="errorCode">Error:</string>
    <string name="succLogout">Logout succesfull</string>
    <string name="noContacts">No contacts</string>
    <string name="problem">There was a problem</string>
    <string name="unable_to_send_message">Unable to send message</string>
    <string name="msg_sent">Message sent!</string>
    <string name="Rfrsh">Refreshh</string>
    <string name="registerSucc">Succesfully reistered!</string>
    <string name="error">Threre was an unexpected error !</string>
    <string name="refreshed">Contact list  has been refreshed</string>
    <string name="new_msg">New mesaage!</string>
    <string name="mesage_problem">There was an unexpected session problem!</string>
    <string name="unexpected_error">There was a unexpected error</string>
    <string-array name="GenderList">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_emails_new">emails_new</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Email Client</string>
    <string name="nav_header_subtitle">Fakultet Tehnickih Nauka</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Folders">foldeers</string>
    <string name="dateTime">time and date</string>
    <string name="unsaved_contact">contact not saved</string>
    <string name="succesfullyCreatedContact">created contact!</string>
    <string name="cannotCreateContact">cannot create contact!</string>
    <string name="menu_contacts">Contacts</string>
    <string name="broke">the process broke</string>
    <string name="createMessage">message sending</string>
    <string name="menu_tags">tags</string>
    <string name="menu_rules">Rules</string>
    <string name="logout">log out</string>
    <string name="ConfirmPassword">new_password</string>
    <string name="profile_info_changed">changed profile information!</string>
</resources>