<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">









<!--

    <FrameLayout
        android:id="@+id/nav_home"/>
    <FrameLayout
        android:id="@+id/nav_account"/>
    <FrameLayout
        android:id="@+id/nav_settings"/>
    <FrameLayout
        android:id="@+id/nav_folders"/>
-->

        <fragment
            android:id="@+id/nav_home"
            android:name="com.example.emailapplication.ui.fragments.EmailListFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_emails" />

        <fragment
            android:id="@+id/nav_account"
            android:name="com.example.emailapplication.ui.fragments.AccountFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile" />
        <fragment
            android:id="@+id/nav_settings"
            android:name="com.example.emailapplication.ui.fragments.SettingsFragment"
            android:label="@string/menu_Settings"
            tools:layout="@layout/fragment_settings" />

        <fragment
            android:id="@+id/nav_folders"
            android:name="com.example.emailapplication.ui.fragments.FoldersFragment"
            android:label="@string/menu_Folders"
            tools:layout="@layout/fragment_folders" />
</navigation>