<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="80dp"
        android:contentDescription="@null"
        android:src="@mipmap/profile_img" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText android:id="@+id/profile_smtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="@string/registerSmtp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginLeft="200dp"/>
        <EditText
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/Username1"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/profile_pop3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="7"

            android:hint="@string/registerPop3"
            android:textAlignment="center"
            android:textSize="25sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/profile_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="@string/Password1"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/profile_password_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:ems="7"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="25sp" />
    </RelativeLayout>
</LinearLayout>
</LinearLayout>