<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:weightSum="2">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/senderOrRecv"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/receiver"
                    />
                <TextView
                    android:id="@+id/message_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/subject" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    >
                        <TextView
                            android:id="@+id/message_dateTime"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:text="@string/dateTime"
                            />

                </LinearLayout>

        </LinearLayout>

