<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <MediaController
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
            <EditText
                android:id="@+id/EditEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:ems="8"
                android:hint="@string/contactEmail"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/EditFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="25dp"
                android:ems="7"
                android:hint="@string/FirstNameHint"
                android:textSize="18sp"
                android:textStyle="bold" />
</LinearLayout>
</LinearLayout>
            <Button
                android:id="@+id/RegistBtns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="18sp"
                android:text="@string/createContact" />



    </LinearLayout>
</RelativeLayout>