<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".activity.LoginActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Welcome"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/UsernameLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="7"
                android:layout_marginLeft="80dp"
                android:hint="@string/Username1"
                android:textAlignment="center"
                android:textSize="25sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/PasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="80dp"
                android:ems="7"
                android:hint="@string/Password1"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="25sp" />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/LoginBtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="39dp"
            android:text="@string/LoginStr"
            android:textSize="20sp" />

        <Button
            android:id="@+id/RegBtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="39dp"
            android:text="@string/registerStr"
            android:textSize="20sp" />
    </RelativeLayout>
    

</LinearLayout>
