<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateMessageActivity">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCreateMessageBackMessages"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:visibility="visible"
            app:navigationIcon="@drawable/abc_vector_test"
            tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/your_username"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/receiver"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/receiver_email"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/bcc"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp" />
        <EditText
            android:id="@+id/bcc"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/ccc"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
        <EditText
            android:id="@+id/ccc"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:paddingLeft="3dp"
            android:text="@string/subject"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
        <EditText
            android:id="@+id/your_subject"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_message"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:height="150dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

        <Button
            android:id="@+id/post_message"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:paddingLeft="15dp"
            android:paddingTop="1dp"
            android:paddingRight="15dp"
            android:paddingBottom="1dp"
            android:text="@string/contact_form_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
</LinearLayout>
